[package]
name = "file_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-clipboard = "0.4"
rayon = "1.8"

[dependencies.regex]
version = "1.9"
default-features = false
features = ["perf-dfa-full"]


[dependencies.cursive]
version = "0.20"
features = ["toml"]